tests/integration/seed/predictions/invalid/ner1.jsonlines
{"annotations": { "Entities": {"entities": [{"tag": "name", "start": 23, "end": 33 }] }}, "FOO": "1831440"}
